--- a/config.json
+++ b/config.json
@@ -1,11 +1,5 @@
 {
-    "ListenAddr": "0.0.0.0:5294",
-    "HTTPAddr": "",
-	"HTTPHostReplace":"",
-    "SSLAddr": "",
-    "SSHAddr": "",
-    "RDPAddr": "",
-	"SOCKS5Addr": "",
-	"HTTPProxyAddr":"",
-    "DefaultAddr": ""
+    "ListenAddr": "0.0.0.0:80",
+    "HTTPAddr": "127.0.0.1:81",
+    "DefaultAddr": "127.0.0.1:8889"
 }
